// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot with link 1`] = `
<div
  class="sc-AxirZ hxAaYH"
  data-testid="files-manager-item"
>
  <test-file-stub
    classname="sc-AxhCb crtuZn"
  />
  <div
    class="sc-AxhUy jSCssk"
  >
    <p
      class="sc-AxjAm eGfSTk"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AxjAm Oohkf"
    >
      3 files (4.0 GB)
    </p>
  </div>
  <a
    class="sc-AxiKw gSUrlS"
    href="#/tools/voice-recorder"
  >
    <test-file-stub
      image="test-file-stub"
    />
  </a>
</div>
`;

exports[`should match snapshot without link 1`] = `
<div
  class="sc-AxirZ hxAaYH"
  data-testid="files-manager-item"
>
  <test-file-stub
    classname="sc-AxhCb crtuZn"
  />
  <div
    class="sc-AxhUy jSCssk"
  >
    <p
      class="sc-AxjAm eGfSTk"
    >
      Voice Recorder
    </p>
    <p
      class="sc-AxjAm Oohkf"
    >
      3 files (4.0 GB)
    </p>
  </div>
</div>
`;
